# touch-grass

./: PLAN.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: publish-guard.yml
Formula/: touch-grass.rb
scripts/: release_touch_grass.sh
src/touch_grass/: __main__.py  cache.py  cli.py  conditions.py  config.py  location.py  weather.py
tests/: conftest.py  test_cache.py  test_cli.py  test_conditions.py  test_config.py  test_location.py  test_weather.py
