[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "touch-grass"
version = "0.1.0"
description = "A CLI tool that checks if it's safe to go outside and touch grass"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
]

[project.scripts]
touch-grass = "touch_grass.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/touch_grass"]
